removed double signs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="utf-8">
-        <title>Minha Página</title>>
+        <title>Minha Página</title>
     </head>
 
     <body>
@@ -22,4 +22,4 @@
 
     </body>
 
-</html>>
+</html>
