Added menu, sections and image.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     </head>
 
     <body>
+        <nav>
+            <ul>
+                <li>SERVIÇOS</li>
+                <li>CLIENTES</li>
+                <li>PARCEIROS</li>
+                <li>TIME</li>
+                <li>CONTATO</li>
+            </ul>
+        </nav>
+
         <p>Minha primeira página</p>
 
         <header>
@@ -15,6 +25,17 @@
                 melhores sites e apps para sua empresa
             </p>
         </header>
+
+        <section id="servicos">
+            <h2>SERVIÇOS</h2>
+            <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.</p>
+            <img src="images/369497190_d4bab4c572_b.jpg" height="240" width="360">
+        </section>
+
+        <section id="clientes">
+            <h2>CLIENTES</h2>
+            <p>Nossos clientes estão satisfeitos com nossos serviços.</p>
+        </section>
 
         <footer>
             <p>Desenvolvido por Bryan Lopes</p>
