New images, sections and links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <nav>
             <ul>
-                <li>SERVIÇOS</li>
-                <li>CLIENTES</li>
-                <li>PARCEIROS</li>
-                <li>TIME</li>
+                <li><a href="#servicos">SERVIÇOS</a></li>
+                <li><a href="#clientes">CLIENTES</a></li>
+                <li><a href="#parceiros">PARCEIROS</a></li>
+                <li><a href="#time">TIME</a></li>
                 <li>CONTATO</li>
             </ul>
         </nav>
@@ -29,12 +29,45 @@
         <section id="servicos">
             <h2>SERVIÇOS</h2>
             <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.</p>
-            <img src="images/369497190_d4bab4c572_b.jpg" height="240" width="360">
+            <div>
+                <img src="images/369497190_d4bab4c572_b.jpg" width="300px">
+            </div>
+            <div>
+                <img src="images/5324223435_08184240d8.jpg" width="300px">
+            </div>
         </section>
 
         <section id="clientes">
             <h2>CLIENTES</h2>
             <p>Nossos clientes estão satisfeitos com nossos serviços.</p>
+            <div>
+                <img src="images/36238194774_008987c7d4_b.jpg" width="300px">
+            </div>
+            <div>
+                <img src="images/36931657531_e850e97343_b.jpg" width="300px">
+            </div>
+        </section>
+
+        <section id="parceiros">
+            <h2>PARCEIROS</h2>
+            <p>Nossos parceiros ajudam a entregar as melhores soluções para nossos clientes.</p>
+            <div>
+                <img src="images/49449841938_d8c11cb9e0_b.jpg" width="300px">
+            </div>
+            <div>
+                <img src="images/49449847863_80790a299b_b.jpg" width="300px">
+            </div>
+        </section>
+
+        <section id="time">
+            <h2>TIME</h2>
+            <p>Nosso time trabalho com muita qualidade e empenho para entregar o melhor produto para nossos clientes.</p>
+            <div>
+                <img src="images/12676689384_b95a11ea3f_b.jpg" width="300px">
+            </div>
+            <div>
+                <img src="images/890937938_0763afa8d2_b.jpg" width="300px">
+            </div>
         </section>
 
         <footer>
