--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <li><a href="#clientes">CLIENTES</a></li>
                 <li><a href="#parceiros">PARCEIROS</a></li>
                 <li><a href="#time">TIME</a></li>
-                <li>CONTATO</li>
+                <li><a href="#contato">CONTATO</a></li>
             </ul>
         </nav>
 
@@ -24,6 +24,7 @@
                 Oferecemos o desenvolvimento dos
                 melhores sites e apps para sua empresa
             </p>
+            <a>Texto de exemplo</a>
         </header>
 
         <section id="servicos">
@@ -57,6 +58,11 @@
             <div>
                 <img src="images/49449847863_80790a299b_b.jpg" width="300px">
             </div>
+            <div>
+                <a href="https://web.digitalinnovation.one/home" target="_blank">
+                    <img src="images/dio.png" width="128px">
+                </a>
+            </div>
         </section>
 
         <section id="time">
@@ -67,6 +73,19 @@
             </div>
             <div>
                 <img src="images/890937938_0763afa8d2_b.jpg" width="300px">
+            </div>
+        </section>
+
+        <section id="contato">
+            <h2>CONTATO</h2>
+            <p>Entre em contato com nossa equipe.</p>
+            <div>
+                <img src="images/email.jpg" width="64px">
+                <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
+            </div>
+            <div>
+                <img src="images/telefone.png" width="64px">
+                <p><a href="tel:9999999999">(99)9999-9999</a></p>
             </div>
         </section>
 
