Added some css as example

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Minha Página</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
 
     <body>
+        <p>Minha página</p>
+
         <nav>
             <ul>
                 <li><a href="#servicos">SERVIÇOS</a></li>
@@ -15,8 +18,6 @@
                 <li><a href="#contato">CONTATO</a></li>
             </ul>
         </nav>
-
-        <p>Minha primeira página</p>
 
         <header>
             <h1>Minha página</h1>
@@ -29,12 +30,12 @@
 
         <section id="servicos">
             <h2>SERVIÇOS</h2>
-            <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.</p>
+            <p>Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.Oferecemos os melhores serviços em desenvolvimento de sites e aplicativos.</p>
             <div>
-                <img src="images/369497190_d4bab4c572_b.jpg" width="300px">
+                <img src="images/369497190_d4bab4c572_b.jpg" class="img_padrao">
             </div>
             <div>
-                <img src="images/5324223435_08184240d8.jpg" width="300px">
+                <img src="images/5324223435_08184240d8.jpg" class="img_padrao">
             </div>
         </section>
 
@@ -42,10 +43,10 @@
             <h2>CLIENTES</h2>
             <p>Nossos clientes estão satisfeitos com nossos serviços.</p>
             <div>
-                <img src="images/36238194774_008987c7d4_b.jpg" width="300px">
+                <img src="images/36238194774_008987c7d4_b.jpg" class="img_padrao">
             </div>
             <div>
-                <img src="images/36931657531_e850e97343_b.jpg" width="300px">
+                <img src="images/36931657531_e850e97343_b.jpg" class="img_padrao">
             </div>
         </section>
 
@@ -53,10 +54,10 @@
             <h2>PARCEIROS</h2>
             <p>Nossos parceiros ajudam a entregar as melhores soluções para nossos clientes.</p>
             <div>
-                <img src="images/49449841938_d8c11cb9e0_b.jpg" width="300px">
+                <img src="images/49449841938_d8c11cb9e0_b.jpg" class="img_padrao">
             </div>
             <div>
-                <img src="images/49449847863_80790a299b_b.jpg" width="300px">
+                <img src="images/49449847863_80790a299b_b.jpg" class="img_padrao">
             </div>
             <div>
                 <a href="https://web.digitalinnovation.one/home" target="_blank">
@@ -69,10 +70,10 @@
             <h2>TIME</h2>
             <p>Nosso time trabalho com muita qualidade e empenho para entregar o melhor produto para nossos clientes.</p>
             <div>
-                <img src="images/12676689384_b95a11ea3f_b.jpg" width="300px">
+                <img src="images/12676689384_b95a11ea3f_b.jpg" class="img_padrao">
             </div>
             <div>
-                <img src="images/890937938_0763afa8d2_b.jpg" width="300px">
+                <img src="images/890937938_0763afa8d2_b.jpg" class="img_padrao">
             </div>
         </section>
 
@@ -80,11 +81,11 @@
             <h2>CONTATO</h2>
             <p>Entre em contato com nossa equipe.</p>
             <div>
-                <img src="images/email.jpg" width="64px">
+                <img src="images/email.jpg" class="logo">
                 <p><a href="mailto:contato@empresa.com">contato@empresa.com</a></p>
             </div>
             <div>
-                <img src="images/telefone.png" width="64px">
+                <img src="images/telefone.png" class="logo">
                 <p><a href="tel:9999999999">(99)9999-9999</a></p>
             </div>
         </section>
